# arb

./: .gitignore  CMakeLists.txt  README.md
config/: config.json
include/: orderbook.hpp  utils.hpp  ws_client.hpp
src/: main.cpp  orderbook.cpp  utils.cpp  ws_client.cpp
src/include/websocket/: endpoints.hpp
